# drowning-detector

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
drowning_detector/api/: main.py
drowning_detector/core/: __init__.py  config.py  constants.py  logging.py
drowning_detector/docker/: .dockerignore  Dockerfile  docker-compose.yml  prometheus.yml
drowning_detector/models/classifier/: model.py
drowning_detector/scripts/: build_annotations.py  clip_videos.py  collect_data.py  download_hmdb51.py  download_kinetics.py  download_youtube.py  extract_poses.py  verify_dataset.py
drowning_detector/tests/: conftest.py
drowning_detector/tests/unit/: test_api.py  test_constants.py  test_model.py
requirements/: base.txt  dev.txt  prod.txt
